bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `SevenMod8: TotalSizeIsMultipleOfEightBits` is not satisfied
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `TotalSizeIsMultipleOfEightBits` is not implemented for `SevenMod8`
   |
   = help: the trait `TotalSizeIsMultipleOfEightBits` is implemented for `ZeroMod8`
note: required by a bound in `CheckModTrait`
  --> src/check.rs
   |
   | pub trait CheckModTrait<T: TotalSizeIsMultipleOfEightBits> {}
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckModTrait`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
